--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <title>Telegram Mini App</title>
     <style>
-        /* Стилі не змінювалися */
         body {
             display: flex;
             flex-direction: column;
@@ -100,7 +99,7 @@
         .nft-image {
             width: 200px;
             height: 200px;
-            background-image: url('https://i.imgur.com/VtVDfFc.png');
+            background-image: url('https://i.imgur.com/mqM8QS8.png');
             background-size: cover;
             border-radius: 50%;
             margin-right: 20px;
@@ -131,10 +130,6 @@
             outline: none;
             -webkit-tap-highlight-color: transparent;
         }
-        .buy-button:focus {
-            outline: none;
-            box-shadow: none;
-        }
         .menu {
             position: fixed;
             bottom: 50px;
@@ -143,24 +138,20 @@
             justify-content: space-around;
             background-color: #333;
         }
-        .menu button {
-            flex: 1;
-            background-color: #444;
-            border: none;
-            color: white;
-            font-size: 20px;
-            padding: 15px 0;
+        .menu-item {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
             cursor: pointer;
-            outline: none;
         }
-        .menu button:focus {
-            outline: none;
+        .menu-item img {
+            width: 50px;
+            height: 50px;
         }
-        .positive-change {
-            color: green;
-        }
-        .negative-change {
-            color: red;
+        .menu-item span {
+            color: white;
+            font-size: 14px;
+            margin-top: 5px;
         }
     </style>
 </head>
@@ -187,118 +178,34 @@
                 <div class="price-change" id="priceChange0"></div>
             </div>
         </div>
-        <div class="nft-box" data-id="1">
-            <div class="nft-image"></div>
-            <div class="nft-info">
-                <div class="nft-price" id="nftPrice1">10000</div>
-                <button class="buy-button" onclick="buyOrSellNFT(1)" id="buyButton1">BUY</button>
-                <div class="price-change" id="priceChange1"></div>
-            </div>
-        </div>
     </div>
 
     <!-- Bottom Menu -->
     <div class="menu">
-        <button onclick="showClicker()">Clicker</button>
-        <button onclick="showNFT()">NFT</button>
+        <div class="menu-item" onclick="showClicker()">
+            <img id="clickerIcon" src="https://imgur.com/S6X7ENF.png">
+            <span>Clicker</span>
+        </div>
+        <div class="menu-item" onclick="showNFT()">
+            <img id="nftIcon" src="https://imgur.com/zM9mVrO.png">
+            <span>NFT</span>
+        </div>
     </div>
 
     <script>
-        let count = localStorage.getItem('counter') ? parseInt(localStorage.getItem('counter')) : 0;
-        let nftPrices = JSON.parse(localStorage.getItem('nftPrices')) || [1000, 10000];
-        let purchasePrices = JSON.parse(localStorage.getItem('purchasePrices')) || [null, null];
-        let hasNFT = JSON.parse(localStorage.getItem('hasNFT')) || [false, false];
-        let clickLimit = 1000;
-        let clicksLeft = clickLimit;
-
-        function setNickname() {
-            document.getElementById('nickname').innerText = "User Name";
-        }
-
-        function updateCounterDisplay() {
-            document.getElementById('counter').innerText = count;
-        }
-
-        function incrementCounter() {
-            if (clicksLeft > 0) {
-                count += 1;
-                clicksLeft -= 1;
-                updateCounterDisplay();
-                updateClickProgress();
-                localStorage.setItem('counter', count);
-                localStorage.setItem('clicksLeft', clicksLeft);
-            }
-        }
-
-        function updateClickProgress() {
-            document.getElementById('clickProgressBar').style.width = (clicksLeft / clickLimit * 100) + '%';
-            document.getElementById('clickCountDisplay').innerText = clicksLeft;
-        }
-
-        setInterval(() => {
-            if (clicksLeft < clickLimit) {
-                clicksLeft += 1;
-                updateClickProgress();
-            }
-        }, 1000);
-
         function showClicker() {
             document.getElementById('clickerScreen').style.display = 'flex';
             document.getElementById('nftScreen').style.display = 'none';
+            document.getElementById('clickerIcon').src = 'https://i.imgur.com/VtVDfFc.png';
+            document.getElementById('nftIcon').src = 'https://imgur.com/zM9mVrO.png';
         }
 
         function showNFT() {
             document.getElementById('clickerScreen').style.display = 'none';
             document.getElementById('nftScreen').style.display = 'flex';
+            document.getElementById('nftIcon').src = 'https://imgur.com/mqM8QS8.png';
+            document.getElementById('clickerIcon').src = 'https://imgur.com/S6X7ENF.png';
         }
-
-        function updateNFTPrices() {
-            let randomFactor = Math.random() * (1.1 - 0.9) + 0.9;
-            nftPrices = nftPrices.map(price => Math.round(price * randomFactor));
-            nftPrices.forEach((price, index) => {
-                document.getElementById(nftPrice${index}).innerText = price;
-                if (hasNFT[index] && purchasePrices[index] !== null) {
-                    let priceChange = ((price - purchasePrices[index]) / purchasePrices[index] * 100).toFixed(2);
-                    document.getElementById(priceChange${index}).innerText = (priceChange >= 0 ? '+' : '') + priceChange + '%';
-                    document.getElementById(priceChange${index}).className = priceChange >= 0 ? 'price-change positive-change' : 'price-change negative-change';
-                }
-            });
-            localStorage.setItem('nftPrices', JSON.stringify(nftPrices));
-        }
-
-        function buyOrSellNFT(index) {
-            const buyButton = document.getElementById(buyButton${index});
-            const priceChangeDisplay = document.getElementById(priceChange${index});
-            if (!hasNFT[index]) {
-                if (count >= nftPrices[index]) {
-                    count -= nftPrices[index];
-                    purchasePrices[index] = nftPrices[index];
-                    hasNFT[index] = true;
-                    buyButton.innerText = 'SELL';
-                    updateCounterDisplay();
-                    priceChangeDisplay.innerText = "0.00%";
-                    priceChangeDisplay.className = 'price-change negative-change';
-                    localStorage.setItem('counter', count);
-                    localStorage.setItem('purchasePrices', JSON.stringify(purchasePrices));
-                    localStorage.setItem('hasNFT', JSON.stringify(hasNFT));
-                }
-            } else {
-                const profit = nftPrices[index] - purchasePrices[index];
-                count += nftPrices[index];
-                hasNFT[index] = false;
-                buyButton.innerText = 'BUY';
-                priceChangeDisplay.innerText = Profit: ${(profit >= 0 ? '+' : '')}${profit};
-                updateCounterDisplay();
-                localStorage.setItem('counter', count);
-                localStorage.setItem('purchasePrices', JSON.stringify(purchasePrices));
-                localStorage.setItem('hasNFT', JSON.stringify(hasNFT));
-            }
-        }
-
-        setNickname();
-        updateCounterDisplay();
-        updateClickProgress();
-        setInterval(updateNFTPrices, 1000); // Оновлюємо ціни кожну секунду
     </script>
 </body>
 </html>
