--- a/index.html
+++ b/index.html
@@ -2,136 +2,139 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-    <title>Telegram Mini App</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Telegram WebApp</title>
+    <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <style>
-        /* Стилі залишились незмінними */
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #18181b;
+            color: #ffffff;
+        }
+        #stream {
+            width: 100%;
+            height: 100vh;
+            border: none;
+        }
+        .balance-box {
+            position: fixed;
+            right: 10px;
+            top: 50px;
+            padding: 10px;
+            border: 2px solid #9146FF;
+            border-radius: 10px;
+            font-size: 20px;
+            background-color: #222;
+        }
+        .action-button {
+            position: fixed;
+            left: 10px;
+            top: 50px;
+            width: 50px;
+            height: 50px;
+            background: url('https://img.icons8.com/ios-filled/50/ffffff/fire-element.png') no-repeat center;
+            background-size: contain;
+            cursor: pointer;
+            transition: transform 0.2s;
+        }
+        .action-button:active {
+            transform: scale(0.9);
+            filter: brightness(1.5);
+        }
+        .menu-container {
+            position: fixed;
+            bottom: 0;
+            width: 100%;
+            display: flex;
+            justify-content: space-around;
+            padding: 10px 0;
+            background-color: #222;
+        }
+        .menu-item {
+            text-align: center;
+            color: #fff;
+            cursor: pointer;
+        }
+        .menu-item img {
+            width: 30px;
+            height: 30px;
+        }
+        .profile-section {
+            display: none;
+            text-align: center;
+            padding: 20px;
+        }
+        .profile-section img {
+            width: 120px;
+            height: 120px;
+            border-radius: 50%;
+            margin-bottom: 10px;
+        }
+        .profile-balance {
+            font-size: 28px;
+            margin-top: 20px;
+        }
     </style>
 </head>
 <body>
-    <div class="nickname" id="nickname">User Name</div>
-
-    <!-- Clicker Screen -->
-    <div id="clickerScreen">
-        <div class="counter" id="counter">0</div>
-        <button class="burger-button" onclick="incrementCounter()"></button>
-        <div class="click-progress">
-            <div class="click-progress-bar" id="clickProgressBar"></div>
+    <iframe id="stream" src="https://player.twitch.tv/?channel=ktwerty_13&parent=alky71.github.io" allowfullscreen></iframe>
+    <div class="balance-box" id="balance">Ваш баланс: завантаження...</div>
+    <div class="action-button" onclick="handleActionClick()"></div>
+    
+    <div class="menu-container">
+        <div class="menu-item" onclick="showStream()">
+            <img src="https://img.icons8.com/ios-filled/50/ffffff/tv.png" alt="Stream">
+            <div>Stream</div>
         </div>
-        <div class="click-count" id="clickCountDisplay">1000</div>
-    </div>
-
-    <!-- NFT Screen -->
-    <div id="nftScreen" class="nft-container" style="display: none;">
-        <div class="nft-box" data-id="0">
-            <div class="nft-image" style="background-image: url('https://imgur.com/mqM8QS8');"></div>
-            <div class="nft-info">
-                <div class="nft-price" id="nftPrice0">1000</div>
-                <button class="buy-button" onclick="buyOrSellNFT(0)" id="buyButton0">BUY</button>
-                <div class="price-change" id="priceChange0"></div>
-            </div>
-        </div>
-        <div class="nft-box" data-id="1">
-            <div class="nft-image" style="background-image: url('https://imgur.com/mqM8QS8');"></div>
-            <div class="nft-info">
-                <div class="nft-price" id="nftPrice1">10000</div>
-                <button class="buy-button" onclick="buyOrSellNFT(1)" id="buyButton1">BUY</button>
-                <div class="price-change" id="priceChange1"></div>
-            </div>
+        <div class="menu-item" onclick="showProfile()">
+            <img src="https://img.icons8.com/ios-filled/50/ffffff/user.png" alt="Profile">
+            <div>Profile</div>
         </div>
     </div>
-
-    <!-- Bottom Menu -->
-    <div class="menu">
-        <button id="clickerMenuButton" onclick="showClicker()">
-            <img src="https://i.imgur.com/VtVDfFc.png" id="clickerMenuIcon" alt="Clicker Menu">
-            Clicker
-        </button>
-        <button id="nftMenuButton" onclick="showNFT()">
-            <img src="https://imgur.com/zM9mVrO.png" id="nftMenuIcon" alt="NFT Menu">
-            NFT
-        </button>
+    
+    <div class="profile-section" id="profile">
+        <img id="user-photo" src="" alt="Avatar">
+        <h2 id="user-name">Ім'я користувача</h2>
+        <div class="profile-balance" id="profile-balance">Баланс: завантаження...</div>
     </div>
 
     <script>
-        // Змінні
-        let balance = 0;
-        let clickLimit = 1000;
-        let clickProgress = clickLimit;
-        let nftPrices = [1000, 10000];
-        let nftPurchasePrices = [null, null]; // Ціна покупки для кожного NFT
+        const tg = window.Telegram.WebApp;
+        tg.expand();
 
-        // Оновлення інтерфейсу
-        function updateUI() {
-            document.getElementById('counter').innerText = balance;
-            document.getElementById('clickCountDisplay').innerText = clickProgress;
-            document.getElementById('clickProgressBar').style.width = `${(clickProgress / clickLimit) * 100}%`;
-        }
-
-        // Натискання на кнопку
-        function incrementCounter() {
-            if (clickProgress > 0) {
-                balance++;
-                clickProgress--;
-                updateUI();
+        async function fetchBalance() {
+            try {
+                const response = await fetch(`https://api.telegram.org/bot7765251171:AAEL8FHmmQLRF0uU80lLFuwAaarFkrSTAqU/sendMessage?chat_id=${tg.initDataUnsafe.user.id}&text=/balance`);
+                const data = await response.json();
+                document.getElementById('balance').innerText = `Ваш баланс: ${data.result.text.split(': ')[1]}`;
+                document.getElementById('profile-balance').innerText = `Баланс: ${data.result.text.split(': ')[1]}`;
+            } catch (error) {
+                document.getElementById('balance').innerText = 'Помилка отримання балансу';
+                document.getElementById('profile-balance').innerText = 'Помилка отримання балансу';
             }
         }
 
-        // Показати екран Clicker
-        function showClicker() {
-            document.getElementById('clickerScreen').style.display = 'block';
-            document.getElementById('nftScreen').style.display = 'none';
-            document.getElementById('clickerMenuIcon').src = 'https://i.imgur.com/VtVDfFc.png';
-            document.getElementById('nftMenuIcon').src = 'https://imgur.com/zM9mVrO.png';
+        function handleActionClick() {
+            const button = document.querySelector('.action-button');
+            button.style.transform = 'scale(1.1)';
+            setTimeout(() => button.style.transform = 'scale(1.0)', 150);
         }
 
-        // Показати екран NFT
-        function showNFT() {
-            document.getElementById('clickerScreen').style.display = 'none';
-            document.getElementById('nftScreen').style.display = 'flex';
-            document.getElementById('clickerMenuIcon').src = 'https://imgur.com/S6X7ENF.png';
-            document.getElementById('nftMenuIcon').src = 'https://imgur.com/mqM8QS8.png';
+        function showProfile() {
+            document.getElementById('stream').style.display = 'none';
+            document.getElementById('profile').style.display = 'block';
+            document.getElementById('user-photo').src = tg.initDataUnsafe.user.photo_url || 'https://img.icons8.com/ios-filled/50/ffffff/user.png';
+            document.getElementById('user-name').innerText = tg.initDataUnsafe.user.first_name;
         }
 
-        // Купівля/Продаж NFT
-        function buyOrSellNFT(index) {
-            const price = nftPrices[index];
-            if (nftPurchasePrices[index] === null) {
-                // Купівля
-                if (balance >= price) {
-                    balance -= price;
-                    nftPurchasePrices[index] = price;
-                    document.getElementById(`buyButton${index}`).innerText = 'SELL';
-                }
-            } else {
-                // Продаж
-                balance += price;
-                nftPurchasePrices[index] = null;
-                document.getElementById(`buyButton${index}`).innerText = 'BUY';
-            }
-            updateUI();
+        function showStream() {
+            document.getElementById('stream').style.display = 'block';
+            document.getElementById('profile').style.display = 'none';
         }
 
-        // Динамічна зміна ціни NFT
-        setInterval(() => {
-            for (let i = 0; i < nftPrices.length; i++) {
-                const change = Math.random() * 0.2 - 0.1; // Зміна від -10% до +10%
-                nftPrices[i] = Math.max(1, Math.round(nftPrices[i] * (1 + change)));
-                document.getElementById(`nftPrice${i}`).innerText = nftPrices[i];
-
-                // Відсоткова зміна від моменту покупки
-                if (nftPurchasePrices[i] !== null) {
-                    const percentChange = ((nftPrices[i] - nftPurchasePrices[i]) / nftPurchasePrices[i]) * 100;
-                    const changeDisplay = document.getElementById(`priceChange${i}`);
-                    changeDisplay.innerText = `${percentChange.toFixed(2)}%`;
-                    changeDisplay.className = percentChange >= 0 ? 'positive-change' : 'negative-change';
-                }
-            }
-        }, 10000); // Оновлення кожні 10 секунд
-
-        // Початкова ініціалізація
-        updateUI();
-        showClicker();
+        fetchBalance();
     </script>
 </body>
 </html>
