--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
             background-size: contain;
             cursor: pointer;
             transition: transform 0.2s;
+            outline: none;
+            border: none;
+            -webkit-tap-highlight-color: transparent;
         }
         .action-button:active {
             transform: scale(0.9);
@@ -56,6 +59,9 @@
             text-align: center;
             color: #fff;
             cursor: pointer;
+            outline: none;
+            border: none;
+            -webkit-tap-highlight-color: transparent;
         }
         .menu-item img {
             width: 30px;
